<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_message"
        android:id="@+id/ar_register_message"
        android:layout_marginTop="29dp"
        android:layout_marginLeft="16dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/ar_name"
        android:layout_below="@+id/ar_register_message"
        android:layout_alignLeft="@+id/ar_register_message"
        android:layout_alignStart="@+id/ar_register_message"
        android:layout_marginTop="41dp"
        android:layout_marginLeft="50dp"
        android:hint="@string/register_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ar_user"
        android:layout_below="@+id/ar_name"
        android:layout_alignLeft="@+id/ar_name"
        android:layout_alignStart="@+id/ar_name"
        android:hint="@string/login_name"
        android:layout_alignRight="@+id/ar_name"
        android:layout_alignEnd="@+id/ar_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/ar_password"
        android:layout_below="@+id/ar_user"
        android:layout_alignLeft="@+id/ar_user"
        android:layout_alignStart="@+id/ar_user"
        android:hint="@string/login_password" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ar_password"
        android:layout_marginTop="20dp"
        android:text="@string/register_button"
        android:id="@+id/ar_button_register"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="register" />

</RelativeLayout>