<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_ca"
        android:id="@+id/ca_instruction_text"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ca_credit_name"
        android:hint="@string/credit_name"
        android:layout_below="@+id/ca_instruction_text"
        android:layout_alignLeft="@+id/ca_instruction_text"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/ca_credit_credit"
        android:hint="@string/credit_balance"
        android:layout_below="@+id/ca_credit_name"
        android:layout_alignLeft="@+id/ca_credit_name"
        android:layout_alignRight="@+id/ca_credit_name" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/ca_credit_save_buton"
        android:layout_marginTop="83dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="addCredit" />
</RelativeLayout>