<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction_text_aa"
        android:id="@+id/aa_instruction_text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/aa_account_name"
        android:layout_below="@+id/aa_instruction_text"
        android:layout_alignLeft="@+id/aa_instruction_text"
        android:layout_alignStart="@+id/aa_instruction_text"
        android:layout_marginTop="36dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/account_name" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/aa_acount_balance"
        android:layout_below="@+id/aa_account_name"
        android:layout_alignLeft="@+id/aa_account_name"
        android:layout_alignStart="@+id/aa_account_name"
        android:layout_alignRight="@+id/aa_account_name"
        android:layout_alignEnd="@+id/aa_account_name"
        android:hint="@string/account_balance" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/aa_account_save_button"
        android:layout_below="@+id/aa_acount_balance"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp" />
</RelativeLayout>